# soup

./: README.md  pyproject.toml
les1/: data.yml
les1/agro-programming/: README.md  camera_calibration.py  task.py  test1.py
les1/agro-programming/src/: __init__.py  launch.py  requirements.txt  scan.py
src/soup/: main.py
src/soup.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
