[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "soup"
dynamic = ["version"]
description = "This module is needed to control drondes"
requires-python = ">=3.10"
authors = [
    {name = "vikchansky", email = "viktoriadruzenok@gmail.com"},
]
maintainers = [
    {name = "VorozhtsovaV", email = "Viktoriavo15@gmail.com"},
    {name = "Markus22848", email = "Kolodyaznyy95@mail.ru"},
]
dependencies = [
    "numpy>=2.1.0",
    "pionsdk",

]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
license = "MIT"
license-files = ["LICENSE*"]
readme = {file = "README.md", content-type = "text/markdown"}

[project.urls]
Homepage = "https://github.com/vikchansky/soup"

[project.scripts]
start_soup = "soup.main:main"

[project.optional-dependencies]
plotting = [
    "matplotlib>=3.10.1",
    "tornado",
]

[dependency-groups]
dev = [
    "furo>=2024.8.6",
    "pre-commit>=4.2.0",
    "ruff>=0.9.10",
    "setuptools-scm>=8.3.1",
    "sphinx>=8.1.3",
    "uv>=0.6.5",
]

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
  "I",      # isort
  "D205",   # pydocstyle
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.cibuildwheel.environment.arm64]
NPY_BLAS_ORDER = "openblas"
NPY_LAPACK_ORDER = "openblas"

[tool.setuptools]
include-package-data = true

[tool.setuptools_scm]